--- a/Dok/Kapitel/Einfuehrung.tex
+++ b/Dok/Kapitel/Einfuehrung.tex
@@ -2,6 +2,7 @@
 \section{Einführung}
 \FloatBarrier
 \subsection{Prinzip der FM-Synthese}
+\label{PrinzipFM}
 Die \textbf{Frequenzmodulationssynthese} ist eine für die Musikwelt sehr wichtige Anwendung der \textbf{Frequenzmodulation (FM)}, welche bereits aus der Nachrichtentechnik bekannt ist. Generell wird dabei die Frequenz eines \textbf{Trägersignals} durch ein weiteres \textbf{Modulationssignal} verändert, die Amplitude bleibt jedoch unangetastet. Bei der FM-Synthese kann sich in besonderen Fällen jedoch auch die Amplitude des Modulierten Signals von dem ursprünglichen Trägersignals unterscheiden. In der Nachrichtentechnik können durch die unterschiedlichen Frequenzen im modulierten Trägersignal Informationen übertragen werden. 
 
 Die momentane Amplitude des modulierten Signals lässt sich durch folgende Formel beschreiben:
